# mariokart-api-model

./: .gitignore  __main__.py  install_torch.py  pyproject.toml  screen_regions.py
.github/workflows/: build.yml
videoeventdetection/dataset_builder/: __init__.py  dataset.py  dataset_splitter.py  player_notation.py  video_splitter.py
videoeventdetection/dataset_builder/download/: file_downloader.py  s3.py
videoeventdetection/training/: __init__.py  dataset.py  train.py  video.py
